Completing the assignment
Signed-off-by: ankith.prakash <ankith.prakash@metricstream.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create-drop
+#spring.sql.init.platform= to specify which platform db. oracle, h2, mongo
+spring.jpa.defer-datasource-initialization=true
